force-app/main/default/objects/ThreatPulse_Config__mdt/ThreatPulse_Config__mdt.object-meta.xml
<CustomObject>
    <description>Stores configurable platform settings for ThreatPulse that administrators can modify without code changes.</description>
    <label>ThreatPulse Config</label>
    <pluralLabel>ThreatPulse Configs</pluralLabel>
</CustomObject>