force-app/main/default/objects/ThreatPulse_Config__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Human-readable description of what this configuration setting controls.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>