force-app/main/default/objects/ThreatPulse_Config__mdt/fields/Setting_Value__c.field-meta.xml
<CustomField>
    <fullName>Setting_Value__c</fullName>
    <description>The string or text value for this configuration setting.</description>
    <label>Setting Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>